update profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "Liangmf11/Liangmf11.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "LMF_pic1.jpg"
   name             : "Mengfei Liang"
   pronouns         : "He/Him"  
   bio              : "Pre-PhD student at CISPA"
