--- a/_config.yml
+++ b/_config.yml
@@ -149,7 +149,7 @@ social:
 analytics:
   provider               :  "google-analytics-4" # false (default), "google", "google-universal", "google-analytics-4", "custom"
   google:
-    tracking_id          : 10395302976
+    tracking_id          : G-9FWZ865MF7
 
 
 # Reading Files
