--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Saarbrücken, Germany"
   employer         : # "Red Brick University"
   uri              : # URL
-  email            : "mengfei.liang.23@ucl.ac.uk" 
+  email            : "mengfei.liang@cispa.de" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
